@@ -34,8 +34,8 @@
       // PHP versions < 5.2.1 only have these memory functions if
       // compiled with --enable-memory-limit.
       if (!function_exists('memory_get_usage')) { 
-        function memory_get_usage($real) { return -1; } 
-        function memory_get_peak_usage($real) { return -1; } 
+        function memory_get_usage() { return -1; } 
+        function memory_get_peak_usage() { return -1; } 
       }
     }
     
@@ -109,7 +109,7 @@
      * @return  int bytes
      */
     public function memoryUsage() {
-      return memory_get_usage(TRUE);
+      return memory_get_usage();
     }
 
     /**
@@ -120,7 +120,7 @@
      * @return  int bytes
      */
     public function peakMemoryUsage() {
-      return memory_get_peak_usage(TRUE);
+      return memory_get_peak_usage();
     }
 
     /**
